Updates: use openresty server, load_balancer.conf, use GeoLite2-Country module, write readme;

--- a/nginx/conf.d/load_balancer.conf
+++ b/nginx/conf.d/load_balancer.conf
@@ -1,60 +1,49 @@
-geo $geo {
-   default global;
-   1.1.1.1 uk;
-   8.8.8.8 us;
+load_module modules/ngx_http_geoip2_module.so;
+
+events {
+    worker_connections 1024;
 }
 
-upstream uk_servers {
-    server uk1:80;
-    server backup:80 backup;
-}
+http {
+    geoip2 /etc/nginx/geoip/GeoLite2-Country.mmdb {
+          $geoip2_data_country_iso_code default=default source=$http_x_forwarded_for country iso_code;
+    }
 
-upstream us_servers {
-    server us1:80;
-    server us2:80;
-    server backup:80 backup;
-}
+    log_format custom '$http_x_forwarded_for - country_code: $geoip2_data_country_iso_code';
 
-upstream global_servers {
-    server global1:80;
-    server backup:80 backup;
-}
+    access_log /dev/stdout custom;
+    error_log /dev/stderr;
 
-server {
-    listen 80;
-    server_name _;
+    map $geoip2_data_country_iso_code $current_upstream {
+      default global_servers;
+      US us_servers; # US
+      GB uk_servers; # UK
+    }
 
-    location / {
-        set $region "";
+    upstream uk_servers {
+        server uk1:80;
+        server backup:80 backup;
+    }
 
-        if ($geo = uk) {
-            set $region uk_servers;
+    upstream us_servers {
+        server us1:80;
+        server us2:80;
+        server backup:80 backup;
+    }
+
+    upstream global_servers {
+        server global1:80;
+        server backup:80 backup;
+    }
+
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://$current_upstream;
+
+            add_header X-Region-Server $current_upstream always;
+            add_header X-Region-Code $geoip2_data_country_iso_code always;
         }
-        if ($geo = us) {
-            set $region us_servers;
-        }
-        if ($region = "") {
-            set $region global_servers;
-        }
-
-        echo $geo;
-
-        add_header Cache-Control "no-store" always;
-
-        add_header X-Region-Server $geo always;
-
-        add_header X-Test-Header "Hello-World" always;
-
-        proxy_pass http://$region;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-        proxy_connect_timeout 1s;
-        proxy_read_timeout 3s;
-        proxy_send_timeout 3s;
-        keepalive_timeout 65s;
     }
 }
