--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: '3'
 services:
   nginx:
     build: ./nginx
-    ports:
-      - "80:80"
     networks:
       - webnet
     depends_on:
@@ -16,51 +14,80 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    ports:
+      - "8086:80"
+    restart: always
 
   uk1:
-    image: httpd:latest  # Basic web server for demo
+    image: nginx:latest  # Basic web server for demo
     networks:
       - webnet
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    volumes:
+      - ./templates/uk/index.html:/usr/share/nginx/html/index.html
+    ports:
+      - "8081:80"
+    restart: always
 
   us1:
-    image: httpd:latest
+    image: nginx:latest
     networks:
       - webnet
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    volumes:
+      - ./templates/us/index.html:/usr/share/nginx/html/index.html
+    ports:
+      - "8082:80"
+    restart: always
 
   us2:
-    image: httpd:latest
+    image: nginx:latest
     networks:
       - webnet
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    volumes:
+      - ./templates/us/index.html:/usr/share/nginx/html/index.html
+    ports:
+      - "8083:80"
+    restart: always
 
   global1:
-    image: httpd:latest
+    image: nginx:latest
     networks:
       - webnet
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    volumes:
+      - ./templates/rest/index.html:/usr/share/nginx/html/index.html
+    ports:
+      - "8084:80"
+    restart: always
 
   backup:
-    image: httpd:latest
+    image: nginx:latest
     networks:
       - webnet
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 5s
       retries: 3
+    volumes:
+      - ./templates/backup/index.html:/usr/share/nginx/html/index.html
+    ports:
+      - "8085:80"
+    restart: always
 
 networks:
   webnet:
+    driver: bridge
